k8s/api/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: robot-telemetry-api
  namespace: robot-telemetry
  labels:
    app: robot-telemetry-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: robot-telemetry-api
  template:
    metadata:
      labels:
        app: robot-telemetry-api
    spec:
      serviceAccountName: api-sa
      containers:
        - name: api
          image: 827913617635.dkr.ecr.ap-northeast-2.amazonaws.com/robot-telemetry-api:latest
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "1"
              memory: "1Gi"
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 30

---
apiVersion: v1
kind: Service
metadata:
  name: robot-telemetry-api
  namespace: robot-telemetry
spec:
  type: ClusterIP
  selector:
    app: robot-telemetry-api
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
